dark mode feature implemented with fixed from submit issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,27 @@
 @import "tailwindcss";
 
 
+
+a {
+    color: #0070f3;
+}
+
+/* Dark Theme Styles */
+[data-theme='dark'] {
+    background-color: #1a202c;
+    color: #e2e8f0;
+}
+
+[data-theme='dark'] a {
+    color: #81e6d9;
+}
+
+html {
+    background-color: white;
+    color: black;
+}
+
+html.dark {
+    background-color: #1a202c;
+    color: white;
+}
